--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python 
 python: '2.7'  
+script: echo "What tests? 🐶"
 after_success: 
   - pip install -r requirements.txt 
   - zappa update
