--- a/zappa_settings_travis.json
+++ b/zappa_settings_travis.json
@@ -1,8 +1,9 @@
 {
     "production": {
         "app_function": "index.app", 
-        "profile_name": "scottx611x@gmail.com", 
-        "s3_bucket": "zappa-0206au0bc",
+        "aws_region": "us-east-1",
+		"project_name": "Website",
+		"s3_bucket": "zappa-0206au0bc",
 		"lets_encrypt_key": "s3://zappa-certify-creds/account.key",
 		"domain": "www.scott-ouellette.com",
 		"lets_encrypt_expression": "rate(15 days)"
