--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -1,9 +1,10 @@
 {
     "production": {
         "app_function": "index.app",
+        "timeout_seconds": 300,
+        "aws_region": "us-east-1",
         "profile_name": "scottx611x@gmail.com", 
         "s3_bucket": "zappa-0206au0bc",
-		"lets_encrypt_key": "s3://zappa-certify-creds/account.key",
 		"domain": "www.scott-ouellette.com",
     }
 }
