--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python 
 python: '2.7'  
-script: python tests.py
+script:
+  - coverage run tests.py
 after_success: 
   - pip install -r requirements.txt 
   - zappa update
