--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ script:
   - coverage run tests.py
 after_success: 
   - pip install -r requirements.txt 
-  - zappa update
+  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then zappa update; fi
 notifications:
   email: scottx611x@gmail.com
   on_success: never
